Update Intro content

--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,8 +4,11 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Senior Engineer working at Covestor, having previously spent over 6 years as a technical consultant at Accenture, giving me a good blend of enterprise and start-up experience. <br/><br/>
-			I enjoy creating great products with great user experiences and working in a dynamic environment with a focus on good development practices, automation and shipping small, frequent releases.
+			I've worked as a photographer, reporter, editor and various other jobs in journalism and government.
+
+			For the past 11 years or more, web development has been my growing passion. From 2005 to 2015, I worked as a multimedia specialist for the Wyoming Department of Workforce Services' Research &amp; Planning section, building static websites and editing publications and online content.
+
+			Not content with producing static websites the same way every day, I began to learn new web technologies and methods.
 		</div>
 		<br>
 	</div>
