--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -8,7 +8,7 @@
 
 			For the past 11 years or more, web development has been my growing passion. From 2005 to 2015, I worked as a multimedia specialist for the Wyoming Department of Workforce Services' Research &amp; Planning section, building static websites and editing publications and online content.
 
-			Not content with producing static websites the same way every day, I began to learn new web technologies and methods.
+			Not content with producing static websites the same way every day, I began to learn new web technologies and methods, including javascript, Jekyll, Flexbox, Foundation, Bootstrap, WordPress, Grunt, Gulp, Git, Bower, Sublime Text, and much more.
 		</div>
 		<br>
 	</div>
