--- a/_includes/section_workexperience.html
+++ b/_includes/section_workexperience.html
@@ -21,7 +21,7 @@
 							<td>{{role.start}}</td>
 							<td>{{role.end}}</td>
 							<td>{{role.employer}}</td>
-							<td class="hidden-sm hidden-xs" >{{role.description}}</td>
+							<td/*class="hidden-sm hidden-xs"*/>{{role.description}}</td>
 						</tr>
 					{% endfor %}
 				</tbody>
