--- a/_includes/section_workexperience.html
+++ b/_includes/section_workexperience.html
@@ -13,7 +13,7 @@
 						<th><a style="cursor: pointer;">Company</a></th>
 					</tr>
 					<tr>
-						<th><a style="cursor: pointer;">Role</a></th>
+						<th colspan=4><a style="cursor: pointer;">Role</a></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -23,6 +23,8 @@
 							<td>{{role.start}}</td>
 							<td>{{role.end}}</td>
 							<td>{{role.employer}}</td>
+						</tr>
+						<tr>
 							<td>{{role.description}}</td>
 						</tr>
 					{% endfor %}
