--- a/_includes/section_workexperience.html
+++ b/_includes/section_workexperience.html
@@ -11,7 +11,7 @@
 						<th><a style="cursor: pointer;">Start Date</a></th>
 						<th><a style="cursor: pointer;">End Date</a></th>
 						<th><a style="cursor: pointer;">Company</a></th>
-						<th colspan=4><a style="cursor: pointer;">Role</a></th>
+						<th><a style="cursor: pointer;">Role</a></th>
 					</tr>
 				</thead>
 				<tbody>
@@ -21,7 +21,7 @@
 							<td>{{role.start}}</td>
 							<td>{{role.end}}</td>
 							<td>{{role.employer}}</td>
-							<td colspan=4>{{role.description}}</td>
+							<td>{{role.description}}</td>
 						</tr>
 					{% endfor %}
 				</tbody>
